<resources>
    <string name="app_name">Suitmedia App</string>

    <!-- First Screen -->
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>

    <string name="check">CHECK</string>
    <string name="next">NEXT</string>

    <string name="empty_input">Please fill this field.</string>\

    <string name="is_palindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>

    <!-- Second Screen -->
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>

    <string name="selected_name">Selected User Name</string>

    <string name="choose_user">Choose a User</string>

    <string name="title_bar_2">Second Screen</string>

    <!-- Third Screen -->
    <string name="username">Firstname Lastname</string>
    <string name="email">EMAIL@EMAIL.COM</string>

    <string name="error">TIMEOUT</string>
    <string name="reload">RELOAD</string>

    <string name="title_bar_3">Third Screen</string>

</resources>